[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/sprites/player_infoScreen/background.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/player_infoScreen/Texts/English/Before we start.png" type="Texture" id=2]
[ext_resource path="res://scenes/player_infoScreen/femaleStaticBody2D.gd" type="Script" id=3]
[ext_resource path="res://assets/sprites/player_infoScreen/player_sex/girl.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/player_infoScreen/player_sex/boy.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/optionsScreen/scenario/horizontalLine.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/player_infoScreen/Texts/English/My name is.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/player_infoScreen/Texts/English/I am a.png" type="Texture" id=8]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 10.0

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 10.0

[node name="Node2D" type="Node2D"]

position = Vector2( 509.787, 303.129 )
scale = Vector2( 16.0003, 9.36731 )
_sections_unfolded = [ "Theme" ]

[node name="background" type="Sprite" parent="." index="0"]

position = Vector2( 0.140717, -0.281078 )
scale = Vector2( 0.0332286, 0.0498973 )
texture = ExtResource( 1 )

[node name="before we start" type="Sprite" parent="." index="1"]

position = Vector2( 1.07022, -28.6918 )
scale = Vector2( 0.046374, 0.105882 )
texture = ExtResource( 2 )

[node name="femaleStaticBody2D" type="StaticBody2D" parent="." index="2"]

position = Vector2( -4.19841, -14.0546 )
scale = Vector2( 0.135039, 0.228504 )
input_pickable = true
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script = ExtResource( 3 )
_sections_unfolded = [ "Pickable", "Transform" ]

[node name="female" type="Sprite" parent="femaleStaticBody2D" index="0"]

position = Vector2( -0.882156, 0.150368 )
scale = Vector2( 0.300926, 0.309537 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="femaleStaticBody2D" index="1"]

position = Vector2( -0.890305, 0.129326 )
scale = Vector2( 3.04294, 3.11775 )
shape = SubResource( 1 )

[node name="maleStaticBody2D" type="StaticBody2D" parent="." index="3"]

position = Vector2( 6.72141, -14.0546 )
scale = Vector2( 0.140087, 0.232815 )
input_pickable = true
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Pickable", "Transform" ]

[node name="male" type="Sprite" parent="maleStaticBody2D" index="0"]

position = Vector2( -0.819275, -0.445023 )
scale = Vector2( 0.290082, 0.303805 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="maleStaticBody2D" index="1"]

position = Vector2( -1.13901, -0.701088 )
scale = Vector2( 2.89804, 3.02381 )
shape = SubResource( 2 )

[node name="Sprite2" type="Sprite" parent="." index="4"]

position = Vector2( -15.8784, -28.8077 )
scale = Vector2( 0.0341116, 0.0974783 )
texture = ExtResource( 6 )
_sections_unfolded = [ "Transform" ]

[node name="Sprite3" type="Sprite" parent="." index="5"]

position = Vector2( 18.4631, -28.8077 )
scale = Vector2( 0.0341116, 0.0974783 )
texture = ExtResource( 6 )
_sections_unfolded = [ "Transform" ]

[node name="Sprite4" type="Sprite" parent="." index="6"]

position = Vector2( -18.7642, -0.305614 )
scale = Vector2( 0.0554678, 0.105235 )
texture = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="." index="7"]

position = Vector2( -16.1985, -14.1275 )
scale = Vector2( 0.0554678, 0.105235 )
texture = ExtResource( 8 )

[connection signal="input_event" from="femaleStaticBody2D" to="femaleStaticBody2D" method="_on_femaleStaticBody2D_input_event"]

[connection signal="mouse_entered" from="femaleStaticBody2D" to="femaleStaticBody2D" method="_on_femaleStaticBody2D_mouse_entered"]

[connection signal="mouse_exited" from="femaleStaticBody2D" to="femaleStaticBody2D" method="_on_femaleStaticBody2D_mouse_exited"]

[connection signal="input_event" from="maleStaticBody2D" to="femaleStaticBody2D" method="_on_maleStaticBody2D_input_event"]

[connection signal="mouse_entered" from="maleStaticBody2D" to="femaleStaticBody2D" method="_on_maleStaticBody2D_mouse_entered"]

[connection signal="mouse_exited" from="maleStaticBody2D" to="femaleStaticBody2D" method="_on_maleStaticBody2D_mouse_exited"]


